--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "convex": "^1.31.7",
     "date-fns": "^4.1.0",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.563.0",
     "maplibre-gl": "^5.17.0",
     "next": "16.1.6",
